[project]
name = "repro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.11.0"
dependencies = [
    "click==8.3.0",
    "typed-settings[option-groups]==25.2.0",
    "attrs==25.4.0"
]


[project.scripts]
repro = "repro.cli:app"

# [tool.uv]
# package = true

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"